--- a/Custom Action/pom.xml
+++ b/Custom Action/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcmail-jdk15on</artifactId>
+            <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.53</version>
         </dependency>
 
