--- a/Custom Action/pom.xml
+++ b/Custom Action/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.neotys.actions.mqtt</groupId>
     <artifactId>neotys-advanced-action-mqtt</artifactId>
     <name>MQTT actions</name>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.1.0</version>
 
     <dependencies>
         <dependency>
