fix repository url
Change-Id: I65bc97a4fd218a71bacdc4ad7bb4f9b2f3436744

--- a/Custom Action/pom.xml
+++ b/Custom Action/pom.xml
@@ -76,7 +76,7 @@
     <repositories>
         <repository>
             <id>neotys-apis-releases</id>
-            <url>http://maven.neotys.com/content/groups/public</url>
+            <url>https://maven.neotys.com/content/groups/public/</url>
         </repository>
     </repositories>
     <distributionManagement>
